--- a/src/css/login-pages.css
+++ b/src/css/login-pages.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+body {
+  width: 50%;
+  margin: auto;
+}
+
+
+
 .flex-row {
     display: flex;
     flex-direction: row;
@@ -51,7 +58,7 @@
   height: 50px;
   flex-shrink: 0;
   border-radius: 15px;
-  background: #F5F7F9;
+  background: #ededed;
   margin-bottom: 20px;
 }
 
@@ -81,8 +88,7 @@
 .input-box-icon {
   color: #74B9BA;
   margin-left: 10px;
-  margin-bottom: 23px;
-  margin-right: 15px;
+  margin-right: 5px;
 }
 
 #icon1 {
@@ -134,13 +140,14 @@ a {
   margin-bottom: 30px;
   justify-content: center;
   border: none;
+  margin-top: 0px;
 }
 
 .create-button-text {
   color: #FFF;
   text-align: center;
   font-family: Roboto;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
@@ -208,7 +215,7 @@ input:-webkit-autofill{
 }
 
 .signup-img {
-  width: 300px;
+  width: 250px;
   text-align: center;
   margin-top: -30px;
   margin-bottom: 0px;
@@ -321,5 +328,48 @@ input:-webkit-autofill{
   width: 24px;
   height: 24px;
   margin-right: 10px;
+}
+
+
+.or-divider {
+  text-align: center;
+  margin-top: 20px;
+  position: relative;
+}
+
+.or-divider::before,
+.or-divider::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 40%;
+  background-color: #ccc; /* Gray lines color */
+}
+
+.or-divider::before {
+  left: 0;
+}
+
+.or-divider::after {
+  right: 0;
+}
+
+.other-login-options {
+  text-align: center;
+  margin-top: 20px;
+}
+
+@media (max-width: 600px) {
+  body {
+    width: 80%;
+    margin: auto;
+  }
+}
+
+@media (max-width: 500px) {
+  body {
+    width: 100%;
+    margin: auto;
+  }
 }
 
