--- a/src/css/home-page.css
+++ b/src/css/home-page.css
@@ -270,7 +270,7 @@
   bottom: -500px;
   width: 100%;
   margin: -8px;
-  height: 44%;
+  height: 370px;
   border-radius: 25px 25px 0px 0px;
   background: #FFF;
   text-align: center;
