--- a/src/css/home-page.css
+++ b/src/css/home-page.css
@@ -65,6 +65,15 @@
   line-height: normal;
 }
 
+.instructions-text {
+  color: #787878;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
 .heading-1 {
   color: #000;
   font-family: Roboto;
