--- a/src/css/home-page.css
+++ b/src/css/home-page.css
@@ -348,7 +348,7 @@
   flex-shrink: 0;
   border-radius: 15px;
   background: #74B9BA;
-  margin: 20px 45px 0px 45px;
+  margin: 20px auto 0px auto;
   justify-content: center;
   text-decoration: none;
 }
@@ -359,7 +359,7 @@
   flex-shrink: 0;
   border-radius: 15px;
   background: #F27373;
-  margin: 20px 45px 0px 45px;
+  margin: 20px auto 0px auto;
   justify-content: center;
   text-decoration: none;
 }
@@ -403,10 +403,18 @@ button {
     -webkit-filter: blur(5px);
 }
 
+#lobe-popup {
+  width:50%;
+}
+
 @media (max-width: 600px) {
   .content-box {
     width: 80%;
     margin: auto;
+  }
+
+  #lobe-popup {
+    width:100%;
   }
 }
 
