--- a/src/css/home-page.css
+++ b/src/css/home-page.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,400;8..144,700&display=swap');
 
 /*~~~~~~~~~~~~~~~~~~~~~ GENERAL ~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
@@ -63,6 +64,15 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+
+.article-text {
+  color: #000;
+  font-family: Roboto Serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
 }
 
 .instructions-text {
@@ -405,6 +415,51 @@ button {
 
 #lobe-popup {
   width:50%;
+}
+
+.article-text {
+  color: #000;
+  font-family: 'Roboto Serif', serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 35px;
+  margin-bottom: 15px;
+}
+.article-title {
+  color: #000;
+  font-family: Roboto;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 15px; 
+  margin-top: 15px;
+  font-weight: bold;
+}
+
+.article-heading {
+  color: #000;
+  font-family: 'Roboto Serif', serif;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 35px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.article-img {
+  margin-bottom: 15px;
+}
+
+hr {
+    display: block; /* Ensure it's set to display as a block element */
+    height: 0.9px;    /* Set a height to make it visible */
+    background-color: #787878; /* Set a background color if it's not visible due to color */
+    z-index:100;
+    width: 100%;
+    outline: none;
+    border: none;
 }
 
 @media (max-width: 600px) {
